--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -2,7 +2,7 @@
 
 /* mobile device */
 
-@media screen and (max-width:500px) {
+@media screen and (max-width:400px) {
               
     .nav-container{
         flex-direction: column;
@@ -24,7 +24,7 @@
 
 /* dextop device */
 
-@media screen and (min-width:501px) and (max-width:760px) {
+@media screen and (min-width:401px) and (max-width:760px) {
          
   .nav-container{
     flex-direction: column;
@@ -50,5 +50,20 @@
 .manu-container .follow-us-btn{
   margin-top: 40px;
 }
+
+.banner-container{
+       flex-direction: column-reverse;
+    }
+    .banner-img{
+      width: 100%;
+      
+  }
+  .banner-text{
+    width: 100%;
+   text-align: center;
+   
+    
+}
+
 }
     
