added finally banner responsive

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -7,7 +7,9 @@
     .nav-container{
         flex-direction: column;
     }
-
+    .banner-section{
+      margin-top: 20px;
+    }
     .manu-container{
         flex-direction: column;
       }
@@ -18,6 +20,20 @@
       .manu-container .follow-us-btn{
         margin-top: 40px;
       }
+
+      .banner-container{
+        flex-direction: column-reverse;
+     }
+     .banner-img{
+       width: 100%;
+       
+   }
+   .banner-text{
+     width: 100%;
+    text-align: center;
+    
+     
+ }
 
     }
 
@@ -49,6 +65,7 @@
 
 .manu-container .follow-us-btn{
   margin-top: 40px;
+  margin-bottom: 20px;
 }
 
 .banner-container{
