--- a/styles/index.css
+++ b/styles/index.css
@@ -172,3 +172,25 @@ nav{
     color:#534C64 ;
     
 }
+
+.online-game-container{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    max-width: 1000px;
+    margin: 50px auto 0px;
+    
+    gap: 10px;
+}
+
+.online-game-card img{
+    width: 100%;
+}
+.online-game-card p{
+    text-align: start;
+    padding-left: 5px;
+}
+
+.online-game-card .rectangle-7:hover{
+    border: 2px solid #F948B2;
+    border-radius:12px ;
+}
