--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -34,6 +34,13 @@
     
      
  }
+ .online-game-container{
+  display: grid;
+  grid-template-columns: repeat(1,1fr);
+  
+  
+  gap: 10px;
+}
 
     }
 
@@ -80,6 +87,13 @@
    text-align: center;
    
     
+}
+.online-game-container{
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  
+  
+  gap: 10px;
 }
 
 }
