--- a/styles/index.css
+++ b/styles/index.css
@@ -215,12 +215,13 @@ nav{
 }
 .play-instantly-container{
     display: flex;
+    gap: 20px;
 }
 
 .play-instantly-text{
     width: 50%;
     text-align: right;
-    margin-top: 150px;
+    margin-top: 100px;
     margin-right: 150px;
 }
 
@@ -255,7 +256,7 @@ nav{
     width: 300px;
     position: relative;
     bottom: 200px;
-    right:  100px;
+    right:  150px;
     border-radius: 8px;
    
    
