--- a/styles/index.css
+++ b/styles/index.css
@@ -265,3 +265,54 @@ nav{
 .regtangle-66 img{
     width:100% ;
 }
+
+/* play-instantly style end here */
+
+/* game style start here */
+
+
+
+.gamer-section{
+    background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
+    
+}
+.gamer{
+    max-width: 1000px;
+    margin: 0 auto;
+    margin-top: 20px;
+    
+}
+
+.game-container{
+ display: flex;
+ flex-wrap: wrap;
+ flex-basis:30px;
+ gap: 10px;
+ justify-content: center;
+ align-content: center;
+ padding-top: 40px;
+}
+
+.game-card{
+    display: flex;
+    
+    
+    /* width: 200px; */
+    border-radius: 50px;
+    padding: 10px ;
+    align-items: center;
+    justify-content: space-between;
+    color: #3C354F;
+    background-color: #FFF;
+   
+
+}
+.game-card:hover{
+         border: 2px solid #F948B2;
+         color: #F948B2;
+}
+.game-card p{
+ font-size: 1rem;
+ font-weight: 600;
+}
+/* game style end here */
