--- a/styles/index.css
+++ b/styles/index.css
@@ -291,6 +291,7 @@ nav{
  justify-content: center;
  align-content: center;
  padding-top: 40px;
+ padding-bottom: 40px;
 }
 
 .game-card{
@@ -316,3 +317,78 @@ nav{
  font-weight: 600;
 }
 /* game style end here */
+
+
+.footer-section{
+    background-color: #0B0223;
+    margin-top: 40px;
+}
+
+
+    
+
+.footer-logo img{
+    width: 80px;
+    height: 30px;
+   
+}    
+  
+  
+.footer-logo p{
+   font-size: 2.5rem;
+   font-weight: 700;
+   
+}
+.game{
+   color:#FF42A5 ;
+}
+.footer-logo{
+    display: flex;
+    
+   
+    gap: 10px;
+    
+    justify-content: center;
+    align-items: center;
+
+   
+    
+}
+.amer{
+    color: #FFF;
+}
+.footer-small-text{
+    display: flex;
+    color: #FFF;
+    justify-content: center;
+    align-items: center;
+    
+}
+.footer-small-text p{
+    padding-right: 20px;
+}
+.fa-brands{
+    color: #FFF;
+    font-size: 2rem;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-right: 20px;
+}
+.terms{
+    display: flex;
+    color: #FFF;
+   justify-content: center;
+   align-items: center;
+}
+.terms p{
+    padding-right: 20px;
+}
+.play{
+    color: #FFF;
+    padding-bottom: 40px;
+}
+
+
+.footer-text{
+    text-align: center;
+}
