--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -42,6 +42,8 @@
   gap: 10px;
 }
 
+
+
 .play-instantly-container{
   flex-direction: column;
 }
@@ -53,21 +55,21 @@
 
 .play-instantly-text p {
   text-align: center;
-  font-size: 1rem;
+  font-size: 10px;
 }
 
 .play-instantly-text{
   width: 100%;
 }
 .play-instantly-picture{
-  width: 80%;
+  width:80%;
   margin-left: 20px;
 }
 .regtangle-66{
   width: 200px;
   position: relative;
   bottom: 100px;
-  left: 120px;
+  left:25px;
   border-radius: 8px;
  
  
@@ -181,7 +183,7 @@
   width: 300px;
   position: relative;
   bottom: 200px;
-  left: 350px;
+  left: 100px;
   border-radius: 8px;
  
  
@@ -194,6 +196,14 @@
 
 .play-instantly-text p {
   text-align: center;
+  
+}
+
+.footer-small-text{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+
+  
   
 }
 
