--- a/styles/index.css
+++ b/styles/index.css
@@ -194,7 +194,7 @@ nav{
     padding-left: 5px;
 }
 
-.online-game-card .rectangle-7:hover{
+/* .online-game-card .rectangle-7:hover{
     border: 2px solid #F948B2;
     border-radius:12px ;
     background-color: #3C354F;
@@ -209,6 +209,39 @@ nav{
    
     
     
+} */
+
+.image{
+    position: relative;
+}
+.image-img{
+    display: block;
+     
+}
+.overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height:76%;
+    background-color: rgb(0,0,0,0.6);
+    color: #F948B2;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    opacity: 0;
+    border: 4px solid #F948B2;
+}
+.overlay:hover{
+    opacity: 1;
+}
+.img-icon{
+    font-size: 2em;
+}
+.image-description{
+    font-size: 1.5em;
 }
 /* online game style end here */
 
